fixed z-indexing for the calendar in the forms

--- a/src/styles/components/inputs/calendar.scss
+++ b/src/styles/components/inputs/calendar.scss
@@ -2,6 +2,7 @@
 
 .calendar-wrapper {
   position: relative;
+  z-index: 1;
 }
 
 .calendar-field {
