--- a/src/styles/components/newInvoiceForm.scss
+++ b/src/styles/components/newInvoiceForm.scss
@@ -47,7 +47,7 @@
 }
 
 .new-invoice-form-action-buttons-z-index-container {
-    z-index: 0;
+    z-index: 1;
     position: sticky;
     bottom: 0;
 }
